--- a/r_Rmd/October 2021.Rmd
+++ b/r_Rmd/October 2021.Rmd
@@ -649,7 +649,7 @@ final_tree %>%
 ```
 # 20211018 - More {tidymodels} - [{case study - part 1}](https://www.tidymodels.org/start/case-study/)
 
-```{r setup, include = F}
+```{r case-study-setup, include = F}
 p_load(tidymodels, vip)
 
 hotels <- 
@@ -742,7 +742,7 @@ autoplot(lr_auc)
 ```{r pumpkin-data, include = F}
 p_load(tidytuesdayR)
 
-tt <- tt_load(Sys.Date())
+tt <- tt_load("2021-10-19")
 readme(tt)
 
 pumpkins_raw <- tt$pumpkins
@@ -782,6 +782,69 @@ pumpkins_sum %>%
   scale_color_paletteer_d("ggpomological::pomological_palette", direction = -1) + 
   scale_fill_paletteer_d("ggpomological::pomological_palette", direction = -1)
 ```
+# 20211020 - More {tidymodels} - [{case study - part 2}](https://www.tidymodels.org/start/case-study/)
+
+```{r rf-model-setup-2, include = FALSE}
+p_load(tidymodels)
+
+cores <- parallel::detectCores()
+cores
+
+rf_mod <- 
+  rand_forest(mtry = tune(), min_n = tune(), trees = 1000) %>% 
+  set_engine("ranger", num.threads = cores) %>%  # ususally let {tune} do the parallel processing
+  set_mode("classification")
+
+rf_recipe <- 
+  recipe(children ~ ., data = hotel_other) %>% 
+  step_date(arrival_date) %>% 
+  step_holiday(arrival_date) %>% 
+  step_rm(arrival_date) 
+
+rf_workflow <- 
+  workflow() %>% 
+  add_model(rf_mod) %>% 
+  add_recipe(rf_recipe)
+
+set.seed(345)
+
+rf_res <- 
+  rf_workflow %>% 
+  tune_grid(val_set,
+            grid = 25,
+            control = control_grid(save_pred = TRUE),
+            metrics = metric_set(roc_auc))
+
+rf_res %>% 
+  show_best(metric = "roc_auc")
+```
+
+```{r rf_plot, include = TRUE}
+autoplot(rf_res)
+```
+
+```{r best-rf, include = FALSE}
+rf_best <- 
+  rf_res %>% 
+  select_best(metric = "roc_auc")
+rf_best
+```
+
+```{r rf_auc, include = TRUE}
+rf_auc <- 
+  rf_res %>% 
+  collect_predictions(parameters = rf_best) %>% 
+  roc_curve(children, .pred_children) %>% 
+  mutate(model = "Random Forest")
+
+bind_rows(rf_auc, lr_auc) %>% 
+  ggplot(aes(x = 1 - specificity, y = sensitivity, col = model)) + 
+  geom_path(lwd = 1.5, alpha = 0.8) +
+  geom_abline(lty = 3) + 
+  coord_equal() + 
+  scale_color_viridis_d(option = "plasma", end = .6)
+```
+
 # Ideas
 
 template, tidymodels, rprojroot, rgbif, geoviz, ggmap, rayvista, camcorder, {renv}, {rayvertex}, {labelled}, {hrbrthemes}, {firatheme}, {pwr}, voronoi, {reprex}, {ggdag}, debug = T for geom_text, {lcmm}, {rolldown}, {ggperiodic}, {codebook}, {muvr}, {pcalg}, {packagemetrics}, {steveproj}, {ungeviz}
