--- a/r_Rmd/October 2021.Rmd
+++ b/r_Rmd/October 2021.Rmd
@@ -1108,10 +1108,48 @@ v
 
 ```
 
+# 20211029 - looking into [{codebook}](https://rubenarslan.github.io/codebook/index.html)
+
+{codebook} uses an Rmd template file to generate a codebook for your data set. I've included some examples below. The sample dataset from {codebook} is in German. `r emo::ji("laugh")`
+
+Works with {labelled} as well.
+
+```{r codebook-setup, include = FALSE, echo = FALSE}
+p_load(codebook, labelled)
+
+# new_codebook_rmd()
+
+bfi <- bfi
+
+set.seed(1)
+
+bfi$age <- rpois(nrow(bfi), 30)
+
+var_label(bfi$age) <- "Alter"
+
+metadata(bfi)$name <- "MOCK Big Five Inventory dataset (German metadata demo)"
+metadata(bfi)$description <- "a small mock Big Five Inventory dataset"
+metadata(bfi)$identifier <- "doi:10.5281/zenodo.1326520"
+metadata(bfi)$datePublished <- "2016-06-01"
+metadata(bfi)$creator <- list(
+      "@type" = "Person",
+      givenName = "Ruben", familyName = "Arslan",
+      email = "ruben.arslan@gmail.com", 
+      affiliation = list("@type" = "Organization",
+        name = "MPI Human Development, Berlin"))
+metadata(bfi)$citation <- "Arslan (2016). Mock BFI data."
+metadata(bfi)$url <- "https://rubenarslan.github.io/codebook/articles/codebook.html"
+metadata(bfi)$temporalCoverage <- "2016" 
+metadata(bfi)$spatialCoverage <- "Goettingen, Germany" 
+
+metadata(bfi)
+
+```
+
 # Ideas
 
 
-template, rprojroot, rgbif, geoviz, ggmap, rayvista, camcorder, {renv}, {rayvertex}, {labelled}, {hrbrthemes}, {firatheme}, {pwr}, voronoi, {reprex}, debug = T for geom_text, {lcmm}, {rolldown}, {ggperiodic}, {codebook}, {muvr}, {pcalg}, {packagemetrics}, {steveproj}, {ungeviz}, {themis}, {biscale}, {prettydoc}, {annotate}
+template, rprojroot, rgbif, geoviz, ggmap, rayvista, camcorder, {renv}, {rayvertex}, {hrbrthemes}, {firatheme}, {pwr}, voronoi, {reprex}, debug = T for geom_text, {lcmm}, {rolldown}, {ggperiodic}, {codebook}, {muvr}, {pcalg}, {packagemetrics}, {steveproj}, {ungeviz}, {themis}, {biscale}, {prettydoc}, {annotate}, {ggeasy}, 
 
 
 <https://albert-rapp.de/post/2021-09-16-similar-data-and-list-like-columns/#helpful-concepts>
