--- a/r_Rmd/November 2021.Rmd
+++ b/r_Rmd/November 2021.Rmd
@@ -301,7 +301,7 @@ ggplot() +
 knitr::include_graphics(path = here("exports", "November", "day-4-plotb-1.png"))
 ```
 
-# 20211104: Day 5 of [30 Day Map Challenge](https://github.com/tjukanovt/30DayMapChallenge)
+# 20211105: Day 5 of [30 Day Map Challenge](https://github.com/tjukanovt/30DayMapChallenge)
 
 **Day 5**: [Open Street Map Data](https://docs.ropensci.org/osmdata/)
 
@@ -340,6 +340,75 @@ ggmap(nlr_map) +
 
 ```{r day-5-graphic, include = TRUE}
 knitr::include_graphics(path = here("exports", "November", "day-5-map-1.png"))
+```
+
+# 20211106: Day 6 of [30 Day Map Challenge](https://github.com/tjukanovt/30DayMapChallenge)
+
+**Day 6**: Red
+
+Weekend
+
+# 20211107: Day 7 of [30 Day Map Challenge](https://github.com/tjukanovt/30DayMapChallenge)
+
+**Day 7**: Green
+
+Weekend
+
+# 20211108: Day 8 of [30 Day Map Challenge](https://github.com/tjukanovt/30DayMapChallenge)
+
+**Day 8**: Blue
+
+```{r day-8-setup, include = FALSE, eval = FALSE}
+p_load(osmdata, ggmap, sf, maps)
+
+p_load(tigris, maps, sf, rnaturalearth, rnaturalearthdata)
+
+
+ar_bbox <- getbb("arkansas")
+
+ar_q_lakes <- opq(ar_bbox) %>% 
+  add_osm_feature(key = "water")
+
+
+ar_q_river <- opq(ar_bbox) %>% 
+  add_osm_feature(key = "waterway", value = "river")
+
+
+ar_lakes <- osmdata_sf(ar_q_lakes)
+
+ar_rivers <- osmdata_sf(ar_q_river)
+
+
+ar_map <- get_map(ar_bbox, color = "bw", source = "osm")
+
+ar_map2 <- st_as_sf(map("state", plot = FALSE, fill = TRUE)) %>% 
+  filter(ID == "arkansas")
+
+ggplot(ar_map2) +
+  geom_sf() + 
+  theme_void()
+
+ar_lakes_df <- ar_lakes$osm_multipolygons
+
+ar_rivers_df <- ar_rivers$osm_lines %>% 
+  st_intersection(ar_map2)
+
+
+```
+
+
+```{r day-8-plot, include = FALSE, eval = FALSE}
+ggplot(ar_map2) + 
+  geom_sf(fill = "#F8F8F8FF", color = "black") + 
+  geom_sf(data = ar_lakes_df, aes(geometry = geometry), fill = "#0072CEFF", color = "#0072CEFF") + 
+  geom_sf(data = ar_rivers_df, aes(geometry = geometry), color = "#0072CEFF") + 
+  theme_void() + 
+  theme(panel.background = element_rect(fill = "#F8F8F8FF")) + 
+  labs(title = "Water in Arkansas")
+```
+
+```{r day-8-map, include = TRUE}
+knitr::include_graphics(path = here("exports", "November", "day-8-plot-1.png"))
 ```
 
 # Render 
